// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DQRoot can generate react flow edges 1`] = `
Array [
  Object {
    "className": "",
    "data": Object {
      "dqRoot": Object {
        "flowTransform": undefined,
        "nodes": Object {
          "1": Object {
            "id": "1",
            "variable": "a",
            "x": 100,
            "y": 100,
          },
          "2": Object {
            "id": "2",
            "variable": "b",
            "x": 100,
            "y": 300,
          },
          "3": Object {
            "id": "3",
            "variable": "c",
            "x": 550,
            "y": 150,
          },
          "4": Object {
            "id": "4",
            "variable": "d",
            "x": 150,
            "y": 500,
          },
        },
      },
      "usedInExpression": undefined,
    },
    "id": "ea-targetc-a",
    "selected": false,
    "source": "a",
    "target": "c",
    "type": "floatingEdge",
  },
  Object {
    "className": "",
    "data": Object {
      "dqRoot": Object {
        "flowTransform": undefined,
        "nodes": Object {
          "1": Object {
            "id": "1",
            "variable": "a",
            "x": 100,
            "y": 100,
          },
          "2": Object {
            "id": "2",
            "variable": "b",
            "x": 100,
            "y": 300,
          },
          "3": Object {
            "id": "3",
            "variable": "c",
            "x": 550,
            "y": 150,
          },
          "4": Object {
            "id": "4",
            "variable": "d",
            "x": 150,
            "y": 500,
          },
        },
      },
      "usedInExpression": undefined,
    },
    "id": "ed-targetc-a",
    "selected": false,
    "source": "d",
    "target": "c",
    "type": "floatingEdge",
  },
  Object {
    "className": "",
    "data": Object {
      "dqRoot": Object {
        "flowTransform": undefined,
        "nodes": Object {
          "1": Object {
            "id": "1",
            "variable": "a",
            "x": 100,
            "y": 100,
          },
          "2": Object {
            "id": "2",
            "variable": "b",
            "x": 100,
            "y": 300,
          },
          "3": Object {
            "id": "3",
            "variable": "c",
            "x": 550,
            "y": 150,
          },
          "4": Object {
            "id": "4",
            "variable": "d",
            "x": 150,
            "y": 500,
          },
        },
      },
      "usedInExpression": undefined,
    },
    "id": "eb-targetc-a",
    "selected": false,
    "source": "b",
    "target": "c",
    "type": "floatingEdge",
  },
]
`;

exports[`DQRoot can generate react flow nodes 1`] = `
Object {
  "nodes": Array [
    Object {
      "connectable": true,
      "data": Object {
        "dqRoot": Object {
          "flowTransform": undefined,
          "nodes": Object {
            "1": Object {
              "id": "1",
              "variable": "a",
              "x": 100,
              "y": 100,
            },
            "2": Object {
              "id": "2",
              "variable": "b",
              "x": 100,
              "y": 300,
            },
            "3": Object {
              "id": "3",
              "variable": "c",
              "x": 550,
              "y": 150,
            },
            "4": Object {
              "id": "4",
              "variable": "d",
              "x": 150,
              "y": 500,
            },
          },
        },
        "node": Object {
          "id": "1",
          "variable": "a",
          "x": 100,
          "y": 100,
        },
        "readOnly": undefined,
      },
      "id": "a",
      "position": Object {
        "x": 100,
        "y": 100,
      },
      "type": "quantityNode",
    },
    Object {
      "connectable": true,
      "data": Object {
        "dqRoot": Object {
          "flowTransform": undefined,
          "nodes": Object {
            "1": Object {
              "id": "1",
              "variable": "a",
              "x": 100,
              "y": 100,
            },
            "2": Object {
              "id": "2",
              "variable": "b",
              "x": 100,
              "y": 300,
            },
            "3": Object {
              "id": "3",
              "variable": "c",
              "x": 550,
              "y": 150,
            },
            "4": Object {
              "id": "4",
              "variable": "d",
              "x": 150,
              "y": 500,
            },
          },
        },
        "node": Object {
          "id": "2",
          "variable": "b",
          "x": 100,
          "y": 300,
        },
        "readOnly": undefined,
      },
      "id": "b",
      "position": Object {
        "x": 100,
        "y": 300,
      },
      "type": "quantityNode",
    },
    Object {
      "connectable": true,
      "data": Object {
        "dqRoot": Object {
          "flowTransform": undefined,
          "nodes": Object {
            "1": Object {
              "id": "1",
              "variable": "a",
              "x": 100,
              "y": 100,
            },
            "2": Object {
              "id": "2",
              "variable": "b",
              "x": 100,
              "y": 300,
            },
            "3": Object {
              "id": "3",
              "variable": "c",
              "x": 550,
              "y": 150,
            },
            "4": Object {
              "id": "4",
              "variable": "d",
              "x": 150,
              "y": 500,
            },
          },
        },
        "node": Object {
          "id": "3",
          "variable": "c",
          "x": 550,
          "y": 150,
        },
        "readOnly": undefined,
      },
      "id": "c",
      "position": Object {
        "x": 550,
        "y": 150,
      },
      "type": "quantityNode",
    },
    Object {
      "connectable": true,
      "data": Object {
        "dqRoot": Object {
          "flowTransform": undefined,
          "nodes": Object {
            "1": Object {
              "id": "1",
              "variable": "a",
              "x": 100,
              "y": 100,
            },
            "2": Object {
              "id": "2",
              "variable": "b",
              "x": 100,
              "y": 300,
            },
            "3": Object {
              "id": "3",
              "variable": "c",
              "x": 550,
              "y": 150,
            },
            "4": Object {
              "id": "4",
              "variable": "d",
              "x": 150,
              "y": 500,
            },
          },
        },
        "node": Object {
          "id": "4",
          "variable": "d",
          "x": 150,
          "y": 500,
        },
        "readOnly": undefined,
      },
      "id": "d",
      "position": Object {
        "x": 150,
        "y": 500,
      },
      "type": "quantityNode",
    },
  ],
  "readOnlyNodes": Array [
    Object {
      "connectable": true,
      "data": Object {
        "dqRoot": Object {
          "flowTransform": undefined,
          "nodes": Object {
            "1": Object {
              "id": "1",
              "variable": "a",
              "x": 100,
              "y": 100,
            },
            "2": Object {
              "id": "2",
              "variable": "b",
              "x": 100,
              "y": 300,
            },
            "3": Object {
              "id": "3",
              "variable": "c",
              "x": 550,
              "y": 150,
            },
            "4": Object {
              "id": "4",
              "variable": "d",
              "x": 150,
              "y": 500,
            },
          },
        },
        "node": Object {
          "id": "1",
          "variable": "a",
          "x": 100,
          "y": 100,
        },
        "readOnly": true,
      },
      "id": "a",
      "position": Object {
        "x": 100,
        "y": 100,
      },
      "type": "quantityNode",
    },
    Object {
      "connectable": true,
      "data": Object {
        "dqRoot": Object {
          "flowTransform": undefined,
          "nodes": Object {
            "1": Object {
              "id": "1",
              "variable": "a",
              "x": 100,
              "y": 100,
            },
            "2": Object {
              "id": "2",
              "variable": "b",
              "x": 100,
              "y": 300,
            },
            "3": Object {
              "id": "3",
              "variable": "c",
              "x": 550,
              "y": 150,
            },
            "4": Object {
              "id": "4",
              "variable": "d",
              "x": 150,
              "y": 500,
            },
          },
        },
        "node": Object {
          "id": "2",
          "variable": "b",
          "x": 100,
          "y": 300,
        },
        "readOnly": true,
      },
      "id": "b",
      "position": Object {
        "x": 100,
        "y": 300,
      },
      "type": "quantityNode",
    },
    Object {
      "connectable": true,
      "data": Object {
        "dqRoot": Object {
          "flowTransform": undefined,
          "nodes": Object {
            "1": Object {
              "id": "1",
              "variable": "a",
              "x": 100,
              "y": 100,
            },
            "2": Object {
              "id": "2",
              "variable": "b",
              "x": 100,
              "y": 300,
            },
            "3": Object {
              "id": "3",
              "variable": "c",
              "x": 550,
              "y": 150,
            },
            "4": Object {
              "id": "4",
              "variable": "d",
              "x": 150,
              "y": 500,
            },
          },
        },
        "node": Object {
          "id": "3",
          "variable": "c",
          "x": 550,
          "y": 150,
        },
        "readOnly": true,
      },
      "id": "c",
      "position": Object {
        "x": 550,
        "y": 150,
      },
      "type": "quantityNode",
    },
    Object {
      "connectable": true,
      "data": Object {
        "dqRoot": Object {
          "flowTransform": undefined,
          "nodes": Object {
            "1": Object {
              "id": "1",
              "variable": "a",
              "x": 100,
              "y": 100,
            },
            "2": Object {
              "id": "2",
              "variable": "b",
              "x": 100,
              "y": 300,
            },
            "3": Object {
              "id": "3",
              "variable": "c",
              "x": 550,
              "y": 150,
            },
            "4": Object {
              "id": "4",
              "variable": "d",
              "x": 150,
              "y": 500,
            },
          },
        },
        "node": Object {
          "id": "4",
          "variable": "d",
          "x": 150,
          "y": 500,
        },
        "readOnly": true,
      },
      "id": "d",
      "position": Object {
        "x": 150,
        "y": 500,
      },
      "type": "quantityNode",
    },
  ],
}
`;
